--- a/welcome-style.css
+++ b/welcome-style.css
@@ -1,29 +1,56 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    background-image: url(./asset/bg.jpg);
-    background-repeat: no-repeat;
-    background-size: cover; 
-    color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: lighter;
-    margin-left: 50px;
-    padding: 30px;
+body {
+  background-image: url(./asset/bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  font-family: "Outfit", serif;
+  font-weight: lighter;
+  margin-left: 50px;
+  padding: 30px;
 }
-
-#welcome-container {
-width: 180px;
-}
-
 #logo {
-    width: 150px;
-    height: auto;
-    margin-bottom: 100px;
+  width: 150px;
+  height: auto;
+  margin-bottom: 100px;
 }
-
+#welcome-title {
+  width: 600px;
+  margin-left: 50px;
+  font-size: 80px;
+  line-height: 60px;
+}
+#sub-title {
+  margin-top: 50px;
+  margin-left: 50px;
+  color: #d20094;
+}
+p {
+  margin: 6px 0 40px 50px;
+}
+ul {
+  margin-left: 75px;
+  line-height: 25px;
+}
+footer {
+  margin: 120px 0 0 50px;
+}
+input {
+  margin-right: 10px;
+  cursor: pointer;
+}
+a {
+  background-color: aqua;
+  color: black;
+  text-decoration: none;
+  padding: 15px 50px;
+  font-weight: bold;
+  margin-left: 600px;
+}
 span {
-    font-weight: bold;
+  font-weight: bold;
 }
