--- a/questions-style.css
+++ b/questions-style.css
@@ -17,42 +17,52 @@ nav {
   height: auto;
   margin-bottom: 100px;
 }
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
 /* style question and buttons */
-#questions {
+#question-container {
   background-color: aqua;
   color: rgb(182, 203, 44);
   margin: 140px 100px;
   text-align: center;
 }
-#btns {
+#container-btns {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  max-width: 300px;
-  margin-left: 400px;
-  gap: 20px;
-  margin-top: 80px;
-
+  gap: 3rem;
+  margin-bottom: 120px;
 }
 
 .btn {
-  padding: 1rem 3rem;
+  padding: 1rem 6rem;
   border-radius: 30px;
   border-top: 2px solid white;
   border-left: none;
   border-right: none;
   border-bottom: none;
-  background-color: transparent;
+  background-color: rgba(255, 255, 255, 0.1);
   color: white;
   text-wrap: nowrap;
   cursor: pointer;
 }
-
-.btn:hover 
+.btn:hover {
+  background-color: #d20094;
+}
+.btn:active {
+  background-color: #900080;
+}
 
 /* style counting */
 footer {
-  margin-top: 170px;
-  margin-bottom: 10px;
-  text-align: center;
+  margin-bottom: 50px;
   color: white;
+}
+footer span {
+  color: #d20094;
 }
