--- a/welcome-style.css
+++ b/welcome-style.css
@@ -42,6 +42,11 @@ footer {
 input {
   margin-right: 10px;
   cursor: pointer;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
+  border: 1px solid white;
 }
 a {
   background-color: aqua;
@@ -51,6 +56,10 @@ a {
   font-weight: bold;
   margin-left: 600px;
 }
+a:hover {
+  background-color: rgb(43, 20, 163);
+}
+
 span {
   font-weight: bold;
 }
