--- a/welcome-style.css
+++ b/welcome-style.css
@@ -18,6 +18,7 @@ body {
   width: 150px;
   height: auto;
   margin-bottom: 100px;
+  margin-left: 50px;
 }
 
 #welcome-title {
@@ -43,11 +44,11 @@ ul {
 }
 
 footer {
-  margin: 100px 0px 10px 50px;
+  margin: 100px 0px 5px 50px;
 }
 
 input {
-  margin-right: 10px;
+  margin-right: 10px; 
   cursor: pointer;
   appearance: none;
   width: 20px;
@@ -55,6 +56,7 @@ input {
   background-color: transparent;
   border: 1px solid white;
   position: relative;
+  vertical-align: middle; 
 }
 
 input:checked::before {
@@ -64,6 +66,12 @@ input:checked::before {
   left: 3px;
   color: white;
   font-size: 16px;
+}
+
+span {
+  font-weight: bold;
+  font-size: 16px;
+  vertical-align: middle;
 }
 
 a {
@@ -85,9 +93,3 @@ a.enabled {
   box-shadow: 0 0 15px 5px rgba(0, 191, 255, 1), 0 0 25px 5px rgba(0, 191, 255, 1); 
   transform: scale(1.1); 
 }
-
-span {
-  font-weight: bold;
-}
-
- 
